styles/main.css
/* ... */
button * {
    display: inline-block;
    vertical-align: middle;
}
button .icon {
    margin-right: 10px;
}
button:active {
    background-color: #390d09;
    -webkit-transition-duration: 0.2s;
    -webkit-transform: scale(0.95);
}
button:disabled {
    background-image: none;
    background-color: #999;
    border-color: #666;
    text-shadow: 2px 1px #666; 
    color: #555;
}
button:focus {
    outline: 0;
}

/*******************************************************************************
            Slider
*******************************************************************************/
#slide-container {
    width: 100%;
    height: 100%;
}
#slide-container .slide .page {
    overflow: hidden;
}

/*******************************************************************************
            Pages 
*******************************************************************************/
.page {
    width: 100%;
    height: 100%;
}
.page > header {
    font-size: 3em;
    font-weight: bold;
    overflow: hidden;
    padding: 1em;
    width: 100%;
    height: 10%;
}
.page .content {
    overflow: auto;
    width: 100%;
    height: 80%;
    padding: 1em;
}
.page footer {
    padding: 1em;
    position: absolute;
    width: 100%;
    height: 10%;
    z-index: 100;
}
.page footer button {
    float: right;
    font-size: 2em;
    margin-left: 0.5em;
    margin-right: 0.5em;
}
::-webkit-scrollbar {
    height: 10px;
    width: 10px;
}
::-webkit-scrollbar-thumb {
    background: #651e19;
    border: solid thin #390d09;
    border-radius: 5px;
}

/* page-initial */
#page-initial .hero-image {
    border-top: solid 10px #651e19;
    border-bottom: solid 10px #651e19;
}
#page-initial .initial-buttons {
    text-align: center;
    margin-top: 50px;
}
#page-initial .initial-buttons button {
    font-size: 4em;
    margin-right: 0.5em;
    min-width: 400px;
}

/* page-movies */
#page-movies > header,
#page-movies > footer {
    box-shadow: 0px 5px 15px 2px #111,
                0px -5px 15px 2px #111;
    position: relative;
    z-index: 1;
}
#page-movies .content {
    border-bottom: thin solid #222;
    border-top: thin solid #222;
    padding: 0;
}
#page-movies .movies-carousel {
    width: 100%;
}
#page-movies .movie {
    box-shadow: 2px 2px 5px 3px #191919;
    display: inline-block;
    margin: 1em;
    position: relative;
    width: 23%;
}
#page-movies .movie:active {
    -webkit-transition-duration: 0.2s;
    -webkit-transform: scale(0.95);
}
#page-movies .movie .movie-data {
    background-color: #8a231c;
    margin-top: -2px;
    padding: 1em;
    width: 100%;
}
#page-movies .movie-rating {
    text-align: center;
    font-size: 1.2em;
}
#page-movies .movie-rating .title {
    font-weight: bold;
}
#page-movies .movie-rating .rating {
    font-style: italic;
}
#page-movies .movie-poster {
    width: 100%;
    height: 100%;
}

/* page-movie and page-showing */
.poster-container
{
    display:inline-block;
    margin-right:-2px;
}
.poster-container .movie-poster {
    width: 200px;
}
.poster-container .movie-rating {
    background-color: #8a231c;
    font-size: 1.2em;
    margin-top: -2px;
    padding: 0.5em;
    text-align: center;
    color:#fff;
}
.poster-container .movie-rating .title {
    font-weight: bold;
}
.poster-container .movie-rating .rating {
    font-style: italic;
}

.poster-strip {
    background-color: rgba(0, 0, 0, 0.75);
    border-top: solid thin #222;
    border-bottom: solid thin #222;
    max-height: 45%;
    padding: 2em;
    position: absolute;
    width: 100%;
    top: 20%;
    display: flex;
}
.poster-strip > div,
.poster-strip .poster-strip-content > div {
    display: inline-block;
    vertical-align: top;
}
.poster-strip .poster-strip-content {
    max-height: 100%;
    width:calc(100% - 200px);
    display:flex;
}

/* page-movie */
#page-movie .movie-hero {
    background-size: 100%;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    -webkit-filter: blur(5px);
    z-index: 0;
}
#page-movie .movie-content {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 1;
}
#page-movie .movie-content > header {
    font-size: 3em;
    font-weight: bold;
    padding: 1em;
    text-shadow: 2px 3px 5px #222;
    max-height: 10%;
}
#page-movie .content {
    padding: 0;
}
#page-movie .content header {
    font-weight: bold;
    font-size: 1.5rem;
    margin-bottom: 0.5em;
}
#page-movie .movie-data {
    flex: 7;
    padding:0 1em;
}
#page-movie .movie-data > div {
    font-size: 1.5em;
}
#page-movie .movie-data .movie-runtime,
#page-movie .movie-data .movie-synopsis {
    margin-bottom: 0.5em;
}
#page-movie .movie-data .movie-synopsis {
    max-height: 150px;
    overflow: auto;
}
#page-movie .movie-data .movie-staff
{
    display:flex;
}
#page-movie .movie-data .cast-container,
#page-movie .movie-data .directors-container {
    display: inline-block;
    vertical-align: top;
    flex:1;
}
#page-movie .movie-data .movie-cast,
#page-movie .movie-data .movie-directors {
    margin-left: 1em;
}
#page-movie .showings-container {
    padding: 0 1em;
    height: 100%;
    flex: 3;
}
#page-movie .showings {
    overflow: auto;
    height: 300px;
    padding:0 .5em;
}
#page-movie .showings .showing {
    font-size: 2em;
    padding: 0.5em;  
    width: 100%;
}
#page-movie .showings .showing .showing-time {
    font-weight: bold;
    margin-right: 0.5em;
    text-align: right;
}
#page-movie .showings .showing .showing-type {
    text-align: left;
}

/* page-showing */
#page-showing .content {
    padding: 0;
    display:flex;
    align-items: center;
}
#page-showing .showing-tickets-form-container
{
    width:70%;
    margin:0 auto;
    background-color:#fff;
    border:solid 1px #e6e6e6;
    box-shadow: 2px 2px 10px 2px #111;
    padding:1em;
    color:#333;
    display:flex;
}
#page-showing .showing-tickets-form-container .showing-tickets-form
{
    width:calc(100% - 200px);
    padding:0 1em;
    font-size:1.2rem;
}
/* ... */

